--- a/FinalExam-UI/index.html
+++ b/FinalExam-UI/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="src\styles\cssreset.css" rel="stylesheet"/>
-    <title>Game store</title>
+    <title>Transport store</title>
   </head>
   <body>
     <div id="root"></div>
